# OSPAiN2

./: .cursorignore  .cursorrules  .cursorrules.bak  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  @horizon-map.mdc  @master-dev-schedule.mdc  @master-todo.mdc  @microManager.mdc  @parking-lot.mdc  AGENTS.md  AGENTS.md.BAK  AUDIT_REPORT.md  CLAUDE.md  GEMINI.md  GEMINI.md.BAK  GITHUB_BACKUP.md  LLMS.txt  ModelsCatalog.css  OSPAiN2.code-workspace  README-absorption.md  README-additional-integrations.md  README-notion-integration.md  README-ollama-os.md  README.md  SUMMARY.md  Start-McpServers.ps1  TERMS_GLOSSARY.md  add-t2p-task.sh  additional-tools.json  agentic-workflow.md  agentic_workflows_rag_research.md  ai-training-guide.md  append-git-tasks.js  append-todo.sh  archive-ospain-hub.bat  (+136 more)
.bak/: master-todo.mdc.bak
agents-system/: README.md  direct_control_launcher.py  example-batch.json  master-control  pyproject.toml  takeover.sh
agents-system/docs/: TODO.md  agent-competition-flow.md  agent-competition-frontend-guidelines.md  agent-competition-implementation-plan.md  agent-competition-system-prd.md  agent-competition-system.md  agent-competition-tech-stack.md  api-reference.md  getting-started.md  master-player-comprehensive.md  master-player.mdc  parking-lot.mdc  t2p-ai-integration.md  task-agent-architecture.md  task-agents-guide.md
agents-system/src/agents_system/: __init__.py  direct_control.py  takeover.py
agents-system/src/agents_system/core/: __init__.py  agent.py  manager.py  master_player.py  schema.py
(+964 files in other folders)
